--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@800&family=Montserrat:wght@600&family=Poppins:wght@300;400;500;700&display=swap");
+
+:root {
+  --red: #eb5757;
+  --green: #27ae60;
+  --blue: #2d9cdb;
+  --gray-1: #333333;
+  --gray-2: #4f4f4f;
+  --gray-3: #828282;
+  --gray-4: #bdbdbd;
+  --gray-btn: #e0e0e0;
+  --gray-6: #f2f2f2;
+  --gray-links: #a9a9a9;
+  --footer-bg: #100e1d;
+}
