--- a/style.css
+++ b/style.css
@@ -13,3 +13,133 @@
   --gray-links: #a9a9a9;
   --footer-bg: #100e1d;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
+}
+
+.nav {
+  background: #fff;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1500;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px 40px;
+}
+
+.logo {
+  font-family: "Heebo", sans-serif;
+  font-weight: 800;
+  font-size: 36px;
+  color: var(--gray-1);
+  text-decoration: none;
+}
+
+.nav-items {
+  display: flex;
+  list-style: none;
+}
+
+.nav-item {
+  margin-left: 40px;
+}
+
+.nav-item:first-child {
+  margin-left: 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
+  color: var(--gray-1);
+}
+
+.nav-link:hover {
+  color: var(--blue);
+  border-bottom: 1px solid var(--blue);
+}
+
+@media screen and (max-width: 768px) {
+  .nav-item {
+    margin-left: 0;
+  }
+  .nav-items {
+    flex-direction: column;
+    width: 90%;
+    position: absolute;
+    top: -1000px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: -1;
+  }
+  .active.nav-items {
+    background: #fff;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1000;
+    height: 60vh;
+    font-size: 20px;
+  }
+  .mobile-nav .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background: var(--gray-1);
+    display: block;
+    cursor: pointer;
+  }
+  .nav-item {
+    width: 100%;
+  }
+  .nav-link {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+  #mobile-nav {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+  }
+  #mobile-nav.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  #mobile-nav.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  #mobile-nav.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+@media screen and (max-width: 518px) {
+  .nav-link {
+    text-align: left;
+    padding-left: 0;
+  }
+}
