--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  height: 100%;
 }
 
 .nav {
@@ -34,6 +34,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 1500;
+  overflow: hidden;
 }
 
 .nav-container {
@@ -142,4 +143,113 @@ body {
     text-align: left;
     padding-left: 0;
   }
+}
+
+section {
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 70px 40px;
+}
+
+.hero-text {
+  max-width: 550px;
+  margin-left: 220px;
+  margin-bottom: 40px;
+  height: 100%;
+}
+
+.blue-sub {
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--blue);
+  margin-bottom: 16px;
+}
+
+.home-heading {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 72px;
+  color: var(--gray-1);
+}
+
+.hero-img {
+  width: 100%;
+  height: 354px;
+  background-image: url("heroImage.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 18px;
+  margin-bottom: 40px;
+}
+
+.hero-join {
+  max-width: 370px;
+  width: 100%;
+  margin-left: 220px;
+}
+
+.join-desc {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--gray-2);
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.join-small {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--gray-3);
+  margin-bottom: 5px;
+}
+
+.form {
+  width: 100%;
+  height: 57px;
+  padding: 4px;
+  background-color: var(--gray-6);
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.email {
+  background-color: transparent;
+  flex: 1;
+  border: none;
+  width: 100%;
+  outline-width: 0;
+  padding-left: 10px;
+}
+
+.email::placeholder {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--gray-4);
+}
+
+.btn-submit {
+  padding: 10px 25px;
+  color: var(--gray-6);
+  font-weight: 500;
+  font-size: 18px;
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+  border-radius: 12px;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-submit:hover {
+  background-color: var(--gray-6);
+  color: var(--blue);
 }
