--- a/style.css
+++ b/style.css
@@ -253,3 +253,85 @@ section {
   background-color: var(--gray-6);
   color: var(--blue);
 }
+
+.small {
+  max-width: 1250px;
+}
+
+.heading {
+  max-width: 346px;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 54px;
+  color: var(--gray-1);
+}
+
+.cards {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 60px;
+}
+
+.card {
+  padding: 45px 35px;
+  border-radius: 24px;
+  transition: all 0.4s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
+  transform: scale(1.07);
+}
+
+.card-icon {
+  padding: 20px;
+  color: #fff;
+  border-radius: 16px;
+  font-size: 18px;
+  margin-bottom: 35px;
+}
+
+.blue {
+  background-color: var(--blue);
+}
+
+.green {
+  background-color: var(--green);
+}
+
+.red {
+  background-color: var(--red);
+}
+
+.card-heading {
+  font-weight: 700;
+  font-size: 24px;
+  color: var(--gray-1);
+  margin-bottom: 24px;
+}
+
+.card-desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--gray-2);
+  margin-bottom: 30px;
+}
+
+.card-btn {
+  padding: 9px 12px;
+  background-color: var(--gray-btn);
+  border-radius: 12px;
+  border: none;
+  color: var(--gray-3);
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.card-btn:hover {
+  color: #fff;
+  background-color: var(--blue);
+}
