--- a/style.css
+++ b/style.css
@@ -335,3 +335,69 @@ section {
   color: #fff;
   background-color: var(--blue);
 }
+
+.wide {
+  max-width: 450px;
+}
+
+.works-flex {
+  display: flex;
+}
+
+.left {
+  margin-right: auto;
+  margin-top: 180px;
+  cursor: pointer;
+}
+
+.right {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.work-img {
+  width: 100%;
+  max-height: 545px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  opacity: 1;
+  transition: all 0.4s ease-in-out;
+}
+
+.work-img:hover {
+  opacity: 0.8;
+}
+
+.work-desc {
+  font-weight: 300;
+  font-size: 14px;
+  color: var(--gray-3);
+}
+
+.work-name {
+  font-weight: 500;
+  font-size: 24px;
+  color: var(--gray-1);
+  transition: all 0.4s ease-in-out;
+}
+
+.work-name:hover {
+  color: var(--red);
+}
+
+.btn-more {
+  font-weight: 500;
+  font-size: 24px;
+  float: right;
+  margin-top: 150px;
+  border: none;
+  outline-width: 0;
+  background: transparent;
+  color: var(--blue);
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.btn-more:hover {
+  color: var(--red);
+}
