--- a/style.css
+++ b/style.css
@@ -488,3 +488,84 @@ section {
 .clients {
   padding-bottom: 100px;
 }
+
+.footer {
+  background-color: var(--footer-bg);
+  color: #fff;
+}
+
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  width: 100%;
+}
+
+.footer-links {
+  grid-column: 1 / 4;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 200%;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.4s ease-in-out;
+}
+
+.footer-link:hover {
+  color: var(--red);
+}
+
+.socials {
+  grid-column: 4 / 9;
+}
+
+.footer-logo {
+  font-family: "Heebo", sans-serif;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 53px;
+  color: var(--gray-6);
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.footer-logo:hover {
+  color: var(--blue);
+}
+
+.social-link {
+  text-decoration: none;
+  margin-right: 5px;
+}
+
+.footer-form {
+  grid-column: 9 / 12;
+}
+
+.light {
+  color: var(--gray-6);
+}
+
+.bottom {
+  color: #828282;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.link {
+  font-size: 14px;
+  line-height: 17px;
+  text-decoration: none;
+  color: #828282;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+
+.link:hover {
+  color: var(--red);
+}
